--- a/.github/workflows/build_latex.yml
+++ b/.github/workflows/build_latex.yml
@@ -10,37 +10,21 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: "Debug: List files before compilation"
-        run: ls -la
-
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
           root_file: ritesh_cv.tex
+          compiler: xelatex
 
-      - name: "Debug: List files after compilation"
-        run: ls -la
-
-      - name: Upload LaTeX log
-        uses: actions/upload-artifact@v3
+      - name: Commit to orphan branch
+        run: |
+          git checkout --orphan pdflatex
+          git rm -rf .
+          git add ritesh_cv.pdf
+          git -c user.name='GitHub Action' -c user.email='action@github.com' commit -m "Built paper"
+      - name: Push changes
+        uses: ad-m/github-push-action@master
         with:
-          name: latex-log
-          path: ritesh_cv.log
-
-      - name: Upload All Files
-        uses: actions/upload-artifact@v3
-        with:
-          name: all-files
-          path: .
-      # - name: Commit to orphan branch
-      #   run: |
-      #     git checkout --orphan pdflatex
-      #     git rm -rf .
-      #     git add ritesh_cv.pdf
-      #     git -c user.name='GitHub Action' -c user.email='action@github.com' commit -m "Built paper"
-      # - name: Push changes
-      #   uses: ad-m/github-push-action@master
-      #   with:
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      #     branch: pdflatex
-      #     force: true
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: pdflatex
+          force: true
